CHANGELOG

2016-05-26 3.14.5

  * fix(window): don't assume window is here

  When required in a node context, we may load the browser build without
  using it. Just for testing other parts of it.

2016-05-25 3.14.4

  * fix(lite): lite package should have browse and browseFrom

2016-05-25 3.14.3

  * fix(retry): also retry on non search methods when DNS failure

    Before this commit, methods with no fallback support (basically every
    method) would fail at retry if the DNS error occured before the API
    client timeout.

    The behavior is now:
    - when a method with a fallback errors because of DNS failure we will
    switch to JSONP right away
    - when a method with no fallback errors because of DNS failure we will
    still retry

    We could use the same mechanism for both (= always try all hosts
    before JSONP) but I am not confident doing this change within a patch
    or minor version. We have too litle data on how blocked XHRS are
    triggered (async, sync?).

    fixes #250

    * fix(request strategy): comply with retry spec, no early JSONP switch

      This commit brings more conformance with request strategy
      specification by only raising timeout when there's a timeout.

      It also stop trying to switch to JSONP asap and always try all hosts
      using XHRS before.

2016-05-24 3.14.2

  * fix(request strategy): increments hostIndex (host adress) on fallback

    When we are switching to fallback, increment host index so that JSONP
    will use another host.

    This issue was caused because we cannot distinguish CORS errors from DNS
    resolution errors in the browser.

    And the code for incrementing the host index was moved into the part
    that switches to the fallback in
    4ec5e6a1f8cd92924ce025d60646b3a47b7d8dca.

    Truth is that the current solution is not optimal as, in the browser,
    we are switching to JSONP when we can't resolve the server name.
